chore: move to monorepo

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -19,7 +19,6 @@
     "@types/http-errors": "^2.0.4",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.22",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "ts-node": "^10.9.2"
   }
 }
