--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -17,7 +17,12 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    /* Plugins */
+    "plugins": [
+      { "name": "typescript-lit-html-plugin" }
+    ]
   },
   "include": ["src"]
 }
