--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,21 +4,29 @@
   "private": true,
   "scripts": {
     "build": "npx tsc",
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "preview": "pnpm run build && pnpm run start"
   },
   "dependencies": {
+    "better-sqlite3": "^9.4.3",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.9",
     "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/http-errors": "^2.0.4",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.22",
+    "@types/web-push": "^3.6.3",
     "ts-node": "^10.9.2"
   }
 }
